<resources>
    <string name="app_name">Youtube Clone</string>
    <string name="connect">Connect</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="new_icon">New</string>
    <string name="subscription">Subscription</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>