<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/id_home"
        android:icon="@drawable/home_icon"
        app:showAsAction="ifRoom"/>


    <item android:title="@string/shorts"
        android:id="@+id/id_shorts"
        android:icon="@drawable/shorts_icon"
        app:showAsAction="ifRoom"/>


    <item android:title="@string/new_icon"
        android:id="@+id/id_new"
        android:icon="@drawable/new_icon"
        app:showAsAction="ifRoom"/>


    <item android:title="@string/subscription"
        android:id="@+id/id_subscription"
        android:icon="@drawable/subscription_icon"
        app:showAsAction="ifRoom"/>


    <item android:title="@string/library"
        android:id="@+id/id_library"
        android:icon="@drawable/library_icon"
        app:showAsAction="ifRoom"/>
</menu>